graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_field_and_object_argument_nested.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field(arg1: {key1: {key2: "value"}}) {
    field2
  }
}
