graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_field_and_string_argument.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1(arg1: "value1") {
    field2
  }
}
