graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_field_and_variable_argument.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field(arg1: $var) {
    field2
  }
}
