graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_inline_fragment_with_multiple_directives.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  ... @include(if: $expandedInfo) @deprecated {
    field21
    field22
  }
  field1
}
