graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_inline_fragment_with_type_condition_and_directive.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  ... on SomeType @include(if: $expandedInfo) {
    field21
    field22
  }
  field1
}
