graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_variables_and_directives.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
query ($var1: String!, $var2: Int) @skip(if: true) @defer {
  field
}
