graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_variables_with_default_value_string.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
query ($var1: String = "value1") {
  field
}
